2005-06-17 00:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m
	* GormCore/GormDocument.m
	* GormCore/GormInspectorsManager.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormObjectInspector.m
	* GormCore/GormPalettesManager.m
	* GormCore/GormResourceEditor.m
	* GormCore/GormWindowEditor.m: Code cleanup.

2005-06-17 00:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Code cleanup.

2005-06-16 23:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Override "stop:" to call endTesting: if a test
	session is running, instead of killing the app.

2005-06-16 19:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBInspector.m: Added "revert" call in setObject:

2005-06-14 20:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Fix in [GormDocument translate] to
	properly redisplay the window after translation.

2005-06-12 23:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormOutlineView.m: _handleDoubleClick: now calls 
	NSDebugLog 

2005-06-12 23:24 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Added GormProtocol.h to the exported headers.

2005-06-12 23:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Modified the data source method
	outlineView:setObjectValue:forItem: to reject outlet/action changes
	when the item and the objectValue are the same.
	* GormCore/GormDocument.m: Changed collectAllObjects to 
	_collectAllObjects, since it is private.
	* GormCore/GormOutlineView.m: In mouseDown: only send to the super
	class under certain conditions.

2005-06-11 14:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Addition of "Translation" submenu as well
	as Load Strings and Export Strings
	* GormCore/GormDocument.h: Declaration of exportStrings
	* GormCore/GormDocument.m: Implementation of exportStrings