@@ -1,3 +1,10 @@
+2005-06-17 07:59 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/0Menus/GormMenuEditor.m
+	* Palettes/0Menus/main.m
+	* Palettes/1Windows/main.m
+	* Palettes/3Containers/inspectors.m: Code cleanup.
+
 2005-06-17 00:47 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormClassManager.m
